# killhouse-vuln-scanner-engine

./: .env  .env.example  .gitignore  Dockerfile.api  Makefile  PHASE3_SUMMARY.md  README.md  SUMMARY.md  TESTING.md  demo_phase3.py  pyproject.toml  requirements.txt  test_phase3_real_scan.py
.github/workflows/: ci.yml
.omc/: project-memory.json
.omc/research/: IMPLEMENTATION_PLAN.md  stage1-git-worktree.md  stage2-python-arch.md  stage3-container-orch.md  stage4-policy-feedback.json  stage4-policy-feedback.md  stage5-exploit-framework.md  stage5-summary.json
.omc/sessions/: 117e8007-9314-4e9e-9c0f-4b5b8377b4d8.json  2ef366a9-a5cd-4b38-b44d-db30ca61ace5.json  383f4aa7-16d1-4c8c-a965-84eaea3c6ab3.json  5eebd7da-c060-4fdb-b724-64d584183ade.json  97448459-e08d-4ae7-a274-d329c8b069fd.json  a8558103-688a-4ba5-b0dd-696995e5bdd6.json  d137561b-8501-4255-b6e4-fc14ab71d7d5.json
.omc/state/: agent-replay-383f4aa7-16d1-4c8c-a965-84eaea3c6ab3.jsonl  agent-replay-d864a92f-b82f-44b2-9686-528bc8117a35.jsonl  subagent-tracking.json
docs/: FEATURE_LLM.md  FEATURE_SPEC_PHASE2-4.md  PLAN-B.md  SUMMARY.md
scripts/: setup-hooks.sh  test_demo.py
scripts/git-hooks/: pre-commit  pre-push
src/: __init__.py  config.py  main.py
tests/: conftest.py  test_aggregator_summary.py  test_container.py  test_embedding_cache.py  test_fix_generator.py  test_phase3_integration.py  test_scanner_aggregator.py  test_scanner_api.py  test_scanner_dast.py  test_scanner_models.py  test_scanner_pipeline.py  test_scanner_sast.py  test_tech_detector.py  test_vuln_database.py  test_worktree.py
(+59 files in other folders)
