[project]
name = "killhouse-vuln-scanner-engine"
version = "0.1.0"
description = "Vulnerability scanner engine with SAST/DAST capabilities"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "unit: Unit tests",
    "integration: Integration tests (require Docker/Podman or external tools)",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "RUF", # ruff-specific rules
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "UP006", # use dict instead of Dict (Pydantic + 3.9 compat)
    "UP007", # use X | Y instead of Optional[X] (Pydantic + 3.9 compat)
    "UP035", # typing.Dict deprecated (Pydantic + 3.9 compat)
    "UP042", # use StrEnum instead of str + Enum (requires 3.11+)
    "UP045", # use X | None instead of Optional[X] (Pydantic compat)
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.format]
quote-style = "double"

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 30
show_missing = true
